<resources>
    <string name="app_name">TrainingAndroid</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="top_music">Top Music</string>
    <string name="library">Thư viện</string>
    <string name="love">Yêu thích</string>
    <string name="go_to_second_activity">Go to Second Activity</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_phone">Enter phone</string>
    <string name="go_to_third_activity">Go to Third Activity</string>
    <string name="fragment_library">Library</string>
    <string name="fragment_love">Love</string>
    <string name="fragment_top_music">Top Music</string>
    <string name="song_name">Song Name</string>
    <string name="play">Play ▶️</string>
    <string name="song_author">Song Author</string>
    <string name="description_peashooter_image">Peashooter Image</string>
    <string name="favorite_song">Favorite Song</string>
    <string name="peashooter_song_name">Peashooter Song</string>
    <string name="peashooter_song_author">Peashooter</string>
    <string name="sunflower_song_name">SunFlower Song</string>
    <string name="sunflower_song_author">SunFlower</string>
    <string name="cherry_bomb_song_name">Cherry Bomb Song</string>
    <string name="cherry_bomb_song_author">Cherry Bomb</string>
    <string name="wall_nut_song_name">Wall Nut Song</string>
    <string name="wall_nut_song_author">Wall Nut Bomb</string>
    <string name="second_activity_put_extra_name_key">NAME</string>
    <string name="second_activity_put_extra_email_key">EMAIL</string>
    <string name="second_activity_put_extra_phone_key">PHONE</string>
    <string name="second_activity_action_bar_title">Second Activity</string>
    <string name="third_activity_action_bar_title">Third Activity</string>
    <string name="main_activity_pages_title_top_music">TOP MUSIC</string>
    <string name="main_activity_pages_title_love">YÊU THÍCH ❤</string>
    <string name="main_activity_pages_title_library">THƯ VIỆN</string>
    <string name="play_music_fragment_song_name">Song Name</string>
    <string name="play_music_fragment_song_author">Song Author</string>
    <string name="play_music_fragment_playing_time">Playing Time</string>
    <string name="play_music_fragment_time_length">Song Length</string>
    <string name="play_music_fragment_repeat_button">Repeat Button</string>
    <string name="play_music_fragment_backward_song">Backward Button</string>
    <string name="play_music_fragment_play_or_pause_a_song">Play or Pause Button</string>
    <string name="play_music_fragment_forward_to_the_next_song">Forward Song Button</string>
    <string name="play_music_fragment_shuffle_play_a_song">Shuffle Song Button</string>
    <string name="play_music_fragment_relative_songs">Bài hát liên quan</string>
    <string name="tablayout_of_the_application">TabLayout of the application</string>
    <string name="viewpager_of_the_application">ViewPager of the application</string>
    <string name="main_activity_tab_layout_content_description">A tablayout with 3 tabitems</string>
    <string name="main_activity_viewpager_content_description">A viewpager to scroll or swipe left or right to other tabitems</string>
    <string name="play_music_activity_get_int_extra_song_image_key">SONG IMAGE</string>
    <string name="play_music_activity_get_int_extra_song_name_key">SONG NAME</string>
    <string name="play_music_activity_get_int_extra_song_author">SONG AUTHOR</string>
    <string name="fragment_top_music_search_view_query_hint">Search for something</string>
</resources>