<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cvTopMusic"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/rlItemCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/top_music_item_card_relativelayout_padding">

        <ImageView
            android:id="@+id/imgSong"
            android:layout_width="@dimen/top_music_item_card_imageview_width"
            android:layout_height="@dimen/top_music_item_card_imageview_height"
            android:contentDescription="@string/description_peashooter_image"
            android:src="@drawable/img_peashooter" />

        <TextView
            android:id="@+id/tvSongName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/top_music_item_card_textview_margin_start"
            android:layout_toEndOf="@+id/imgSong"
            android:paddingBottom="@dimen/top_music_item_card_padding_bottom"
            android:text="@string/song_name"
            android:textColor="@color/black"
            android:textSize="@dimen/top_music_item_card_textview_text" />

        <TextView
            android:id="@+id/tvAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvSongName"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/top_music_item_card_textview_margin_start"
            android:layout_toEndOf="@+id/imgSong"
            android:text="@string/song_author"
            android:textColor="@color/grey"
            android:textSize="@dimen/top_music_item_card_textview_text" />

        <Button
            android:id="@+id/btnPlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/top_music_play_button_margin_top"
            android:text="@string/play"
            tools:ignore="RelativeOverlap" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>